<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/darkCyan"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:gravity="center"
    tools:context=".RegisterUserActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/register_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/default_size"
                android:background="@drawable/shape_edittext_default"
                android:layout_marginBottom="@dimen/default_size"
                android:hint="@string/register_name"/>

            <EditText
                android:id="@+id/register_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/default_size"
                android:background="@drawable/shape_edittext_default"
                android:layout_marginBottom="@dimen/default_size"
                android:hint="@string/register_email"/>

            <EditText
                android:id="@+id/register_password"
                android:layout_width="match_parent"
                android:inputType="textPassword"
                android:layout_height="wrap_content"
                android:padding="@dimen/default_size"
                android:background="@drawable/shape_edittext_default"
                android:layout_marginBottom="@dimen/default_size"
                android:hint="@string/register_password"/>

            <EditText
                android:id="@+id/register_confirm_password"
                android:inputType="textPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/default_size"
                android:background="@drawable/shape_edittext_default"
                android:layout_marginBottom="@dimen/default_size"
                android:hint="@string/register_repeate_password"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/shape_button_start"
                android:onClick="registerUser"
                android:text="@string/register"/>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
