<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/darkCyan"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.antiaedes.DenunciationActivity">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/denunciation_camera"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:layout_marginBottom="@dimen/default_size"
                android:clickable="true"
                android:onClick="capturePhoto"
                android:src="@drawable/camera" />

            <Spinner
                android:id="@+id/denunciation_spinner"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/denunciation_cep"
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:background="@drawable/shape_edittext_default"
                    android:textColorHint="@color/grey"
                    android:hint="@string/denunciation_cep"
                    android:layout_marginBottom="@dimen/default_size"
                    android:padding="@dimen/default_size" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:onClick="captureLocation"
                    android:text="@string/denunciation_take_place"/>
            </LinearLayout>

            <EditText
                android:id="@+id/denunciation_neighborhood"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/grey"
                android:background="@drawable/shape_edittext_default"
                android:hint="@string/denunciation_neighborhood"
                android:textColor="@color/black"
                android:layout_marginBottom="@dimen/default_size"
                android:padding="@dimen/default_size" />

            <EditText
                android:id="@+id/denunciation_street"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/grey"
                android:padding="@dimen/default_size"
                android:textColor="@color/black"
                android:background="@drawable/shape_edittext_default"
                android:layout_marginBottom="@dimen/default_size"
                android:hint="@string/denunciation_street"/>

            <EditText
                android:id="@+id/denunciation_city"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/shape_edittext_default"
                android:hint="@string/denunciation_city"
                android:layout_marginBottom="@dimen/default_size"
                android:textColorHint="@color/grey"
                android:textColor="@color/black"
                android:padding="@dimen/default_size" />

            <EditText
                android:id="@+id/denunciation_reference"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/default_size"
                android:textColor="@color/black"
                android:textColorHint="@color/grey"
                android:background="@drawable/shape_edittext_default"
                android:layout_marginBottom="@dimen/default_size"
                android:hint="@string/denunciation_reference"/>

            <EditText
                android:id="@+id/denunciation_details"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/default_size"
                android:textColor="@color/black"
                android:textColorHint="@color/grey"
                android:background="@drawable/shape_edittext_default"
                android:layout_marginBottom="@dimen/default_size"
                android:lines="3"
                android:hint="@string/denunciation_observation"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/shape_button_start"
                android:onClick="denunciation"
                android:text="@string/denunciation"/>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
