<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/darkCyan"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.antiaedes.InformationDenunciationActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="120dp"
                android:layout_marginBottom="@dimen/default_size"
                android:src="@drawable/noimage" />

            <Spinner
                android:id="@+id/info_type_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/default_size"
                android:background="@drawable/shape_edittext_default"
                android:enabled="false"></Spinner>


            <EditText
                android:id="@+id/info_cep"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/default_size"
                android:background="@drawable/shape_edittext_default"
                android:enabled="false"
                android:hint="@string/denunciation_cep"
                android:padding="@dimen/default_size" />

            <EditText
                android:id="@+id/info_num_house"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/default_size"
                android:background="@drawable/shape_edittext_default"
                android:enabled="false"
                android:hint="@string/denunciation_number_house"
                android:padding="@dimen/default_size" />

            <EditText
                android:id="@+id/info_neighborhood"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/default_size"
                android:background="@drawable/shape_edittext_default"
                android:enabled="false"
                android:hint="@string/denunciation_neighborhood"
                android:padding="@dimen/default_size" />

            <EditText
                android:id="@+id/info_street"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/default_size"
                android:background="@drawable/shape_edittext_default"
                android:enabled="false"
                android:hint="@string/denunciation_street"
                android:padding="@dimen/default_size" />

            <EditText
                android:id="@+id/info_reference"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/default_size"
                android:background="@drawable/shape_edittext_default"
                android:enabled="false"
                android:hint="@string/denunciation_reference"
                android:padding="@dimen/default_size" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/default_size"
                    android:text="@string/visit_situation"
                    android:textColor="@color/white"
                    android:textSize="25sp"
                    android:textStyle="bold" />

                <Spinner
                    android:id="@+id/info_situation_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/default_size"
                    android:background="@drawable/shape_edittext_default"
                    android:enabled="false"></Spinner>
            </LinearLayout>

            <EditText
                android:id="@+id/info_observation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/default_size"
                android:background="@drawable/shape_edittext_default"
                android:enabled="false"
                android:hint="@string/visit_observation"
                android:lines="3"
                android:padding="@dimen/default_size" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/shape_button_start"
                android:hint="@string/register_visit" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>


