<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/darkCyan"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.antiaedes.HistoricVisitActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="120dp"
        android:layout_marginBottom="@dimen/default_size"
        android:clickable="true"
        android:onClick="readQRCode"
        android:src="@drawable/static_qr_code_without_logo"/>

    <EditText
        android:id="@+id/historic_num_house"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/default_size"
        android:background="@drawable/shape_edittext_default"
        android:hint="@string/denunciation_number_house"
        android:padding="@dimen/default_size" />

    <EditText
        android:id="@+id/historic_visit_cep"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/default_size"
        android:background="@drawable/shape_edittext_default"
        android:hint="@string/denunciation_cep"
        android:padding="@dimen/default_size" />

    <Button
        android:onClick="searchHistoric"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_button_start"
        android:hint="@string/register_visit" />

</LinearLayout>
