<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout01"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.antiaedes.CareActivity">

    <RelativeLayout
        android:id="@+id/RelativeLayout01"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ViewFlipper
            android:id="@+id/flipper_care"
            android:layout_width="match_parent"
            android:layout_height="400dp">

            <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="@dimen/default_size">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="160dp"
                android:src="@drawable/caixadagua"
                android:layout_marginBottom="@dimen/default_size"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="19sp"
                android:text="@string/care_water_box"/>
        </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="@dimen/default_size">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="160dp"
                    android:src="@drawable/caixadagua"
                    android:layout_marginBottom="@dimen/default_size"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textSize="19sp"
                    android:text="@string/care_water_box"/>
            </LinearLayout>
        </ViewFlipper>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/aa"
        android:layout_below="@+id/RelativeLayout01"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/care_previous"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/previous" >
        </Button>

        <Button
            android:id="@+id/care_next"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_marginBottom="5dp"
            android:layout_marginRight="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/next" >
        </Button>
    </RelativeLayout>
</LinearLayout>
